body bg. projects cards. footer

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
     "header header header"
     "main   main   main"
     "footer footer footer";
+    background-image: url(./img/dot-grid.png);
 }
 
 #main-header {
@@ -61,6 +62,7 @@ main {
   margin: 0 auto;
   margin-top: 70px;
   max-width: 1200px;
+  padding: 0.5rem;
 }
 
 footer {
@@ -113,4 +115,22 @@ footer {
 .main-title {
   text-align: center;
   padding-top: 2rem;
+}
+
+/* projects */
+#projects {
+  display: flex;
+}
+.project-card {
+  flex: 1 1 30%;
+  border: 1px solid black;
+  margin-right: 1rem;
+  padding: 1rem;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  min-height: 50px;
+  background: plum;
 }
