--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+/* colors */
+:root {
+  --black-1: #111;
+  --black-2: #222;
+  --black-3: #333;
+
+  --grey-1: #777;
+  --grey-2: #888;
+  --grey-3: #999;
+
+  --btn-bs: 1px 1px 2px rgba(0, 0, 0, 0.4);
+}
+
 /* reset */
 *,
 *::after,
@@ -76,6 +89,24 @@ footer {
 }
 
 
+/* general headings, p ,button, etc */
+.row-section {
+  margin-bottom: 1rem;
+}
+
+.sub-title {
+margin-bottom: 1rem;
+}
+
+.btn {
+  padding: 0.5rem 1rem;
+  background: var(--grey-3);
+  border: 1px solid var(--grey-1);
+  border-radius: 4px;
+  box-shadow: var(--btn-bs);
+}
+
+
 /* navbar */
 .logo-container {
   /* background: white; */
@@ -132,4 +163,22 @@ footer {
   margin-right: 1rem;
   padding: 1rem;
   background: white;
+}
+
+/*       blog     */
+.blog-entries-container {
+  /* background: red; */
+  display: flex;
+  justify-content: space-between;
+}
+
+.blog-entry {
+  /* background: blue; */
+  flex: 0 1 30%;
+  border: 1px solid black;
+  padding: 1rem;
+}
+
+.blog-entry__title {
+  font-size: 2rem;
 }
