--- a/style.css
+++ b/style.css
@@ -87,6 +87,8 @@ footer {
   justify-content: center;
   min-height: 50px;
   background: plum;
+  padding: 2rem;
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 
@@ -104,10 +106,21 @@ h1 {
   font-size: 3rem;
 }
 .sub-title {
+  position: relative;
   margin-top: 140px;
   margin-bottom: 1rem;
   color: var(--black-2);
   text-transform: capitalize;
+  font-size: 3rem;
+}
+.sub-title:after {
+  content: "";
+  background: black;
+  width: 15%;
+  height: 2px;
+  position: absolute;
+  bottom: -0.5rem;
+  left: 0;
 }
 
 .btn {
@@ -192,7 +205,7 @@ h1 {
   font-size: 6rem;
   max-width: 410px;
   /* color: crimson; */
-  color: black;
+  color: whitesmoke;
   text-transform: uppercase;
   text-align: left;
   padding-left: 2rem;
